--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "employee-tracker",
   "version": "1.0.0",
-  "description": "app to tack employee information",
-  "main": "index.js",
+  "description": "app to track employee information",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HunterBrennan1/Employee-Tracker.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HunterBrennan1/Employee-Tracker/issues"
-  },
-  "homepage": "https://github.com/HunterBrennan1/Employee-Tracker#readme",
+  "type": "module",
   "dependencies": {
+    "console.table": "^0.10.0",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
+    "express": "^4.18.2",
     "inquirer": "^9.1.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0"
   }
 }
